--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -7,6 +7,6 @@
     box-sizing: border-box
 
 body
-    background-color: variables.$body-bg-color
+    background-image: variables.$bg-background-color
 a, svg 
     transition: .8s
