--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -5,8 +5,6 @@
     justify-content: center
     align-content: center
     
-
-
 @mixin btn
     padding: 1rem 1.2rem
     color: variables.$text-color
@@ -16,7 +14,7 @@
 
 @mixin gradient-border
     content: ""
-    background-color: rgba(221,36,118,1)
+    background-image: variables.$gradient
     height: 3px
     width: 50%
     margin-top: 1.2rem
