mudanças na parte de tecnologia

--- a/src/styles/components/maincontent.sass
+++ b/src/styles/components/maincontent.sass
@@ -31,5 +31,6 @@
     .btn
         @include mixins.btn
         align-items: start
-        width: 20%
+        width: 20%   
+        // width: 300px
         text-align: center
