--- a/src/styles/components/technologiescontainer.sass
+++ b/src/styles/components/technologiescontainer.sass
@@ -1,22 +1,28 @@
 @use '../variables'
 @use '../mixins'
 
-.technologies-containter 
+.technologies-containter-front
     margin-bottom: 1rem
+    a
+        @include mixins.center
+        @include mixins.btn
+        margin-top: 3rem
+        margin-bottom: 1rem
 
-    .technologias-grid
+    .technologias-grid-front
         display: flex
-        flex-wrap: wrap
+        // flex-wrap: wrap
         gap: 1.5rem
 
-        .technology-card
+        .technology-card-front
             @include mixins.center
             gap: 1rem
             padding: 1rem
             border: 1px solid #333
             width: 45%
             border-radius: variables.$card-border-radius
-
+            justify-content: flex-start
+            flex-direction: column
             h3
                 color: variables.$text-color
                 margin-bottom: 1rem
