--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -10,4 +10,8 @@ $container-border-radius: 10px
 $card-border-radius: 5px
 $gradient: linear-gradient(90deg, rgba(250,82,82,1) 0%, rgba(221,36,118,1) 100%)
 
-$bg-background-color: linear-gradient(200deg, #8e0087 0%, rgba(47,0,132,1) 60%, rgba(65,0,142,1) 100%)
+$bg-background-color: linear-gradient(270deg, #8e0087 0%, rgba(47,0,132,1) 60%, rgba(65,0,142,1) 100%)
+$bg-background-tech-page: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #29e630 100%)
+
+$python-colors: #00618A
+$html-colors: #ff9500
