--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -19,3 +19,7 @@
     width: 50%
     margin-top: 1.2rem
     
+@mixin hover-btn
+    filter: drop-shadow(0 0 1em variables.$color-border)
+    font-size: 1.3rem
+    
