--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -13,5 +13,7 @@ $gradient: linear-gradient(90deg, rgba(250,82,82,1) 0%, rgba(221,36,118,1) 100%)
 $bg-background-color: linear-gradient(270deg, #8e0087 0%, rgba(47,0,132,1) 60%, rgba(65,0,142,1) 100%)
 $bg-background-tech-page: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #29e630 100%)
 
+$color-border: #ff0099
+
 $python-colors: #00618A
 $html-colors: #ff9500
