--- a/src/styles/components/pages.sass
+++ b/src/styles/components/pages.sass
@@ -2,7 +2,6 @@
 @use '../mixins'
 
 
-
 #technologies-id
     background-image: variables.$bg-background-tech-page
     flex: 2 1 0
@@ -12,9 +11,10 @@
     section
         display: flex
         flex-direction: column
+        align-items: center
         
     h2
-        color: variables.$bg-background-color   
+        color: #f3efef
         font-size: 4.2rem
         margin-bottom: 0.5  rem
         @include mixins.center
@@ -45,7 +45,12 @@
         width: 20%
         text-align: center
         margin-top: 1rem
+        font-size: 1rem
     
+    a:hover
+        @include mixins.hover-btn
+
+
     #title-div
         display: flex
         flex-direction: column
@@ -68,7 +73,7 @@
             @include mixins.center
             gap: 1rem
             padding: 1rem
-            border: 3px solid #ff0099
+            border: 3px solid variables.$color-border
             width: 30%
             border-radius: variables.$container-border-radius
             background: variables.$bg-color
