--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -11,6 +11,8 @@
     background: variables.$gradient
     text-decoration: none
     border-radius: 3rem
+    @media (max-width: variables.$layout-smartphone-break)
+        width: 100%
 
 @mixin gradient-border
     content: ""
