--- a/src/styles/components/app.sass
+++ b/src/styles/components/app.sass
@@ -1,4 +1,7 @@
 @use '../variables'
+// @use '../mixinsbreakpoint'
+
+// PC
 
 #portfolio
     display: flex
@@ -13,3 +16,22 @@
         background: variables.$gradient
         -webkit-background-clip: text
         -webkit-text-fill-color: transparent
+
+// celular/tablet
+@media (max-width: variables.$layout-smartphone-break)
+    #portfolio
+        display: flex
+        flex-direction: column
+        flex-wrap: nowrap
+        padding: 1rem
+        gap: 3rem
+        justify-content: center
+        align-content: center
+        
+        h1
+            width: 100%
+            font-size: 4rem
+            margin-bottom: 2rem
+            background: variables.$gradient
+            -webkit-background-clip: text
+            -webkit-text-fill-color: transparent
