--- a/src/styles/components/app.sass
+++ b/src/styles/components/app.sass
@@ -35,3 +35,21 @@
             background: variables.$gradient
             -webkit-background-clip: text
             -webkit-text-fill-color: transparent
+        
+        @media (max-width: variables.$smart-smartphone-break)
+            h1
+                width: 100%
+                font-size: 3.5rem
+                margin-bottom: 2rem
+                background: variables.$gradient
+                -webkit-background-clip: text
+                -webkit-text-fill-color: transparent
+        
+        @media (max-width: variables.$ultra-smart-smartphone-break)
+            h1
+                width: 100%
+                font-size: 3rem
+                margin-bottom: 2rem
+                background: variables.$gradient
+                -webkit-background-clip: text
+                -webkit-text-fill-color: transparent
