--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -11,7 +11,9 @@ $card-border-radius: 5px
 $gradient: linear-gradient(90deg, rgba(250,82,82,1) 0%, rgba(221,36,118,1) 100%)
 
 $bg-background-color: linear-gradient(270deg, #8e0087 0%, rgba(47,0,132,1) 60%, rgba(65,0,142,1) 100%)
-$bg-background-color-smartphone: linear-gradient(0kdeg, #8e0087 0%, rgba(47,0,132,1) 60%, rgba(65,0,142,1) 100%)
+$bg-background-color-smartphone: linear-gradient(0deg, #8e0087 0%, rgba(47,0,132,1) 60%, rgba(65,0,142,1) 100%)
+
+
 $bg-background-tech-page: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #29e630 100%)
 
 $color-border: #ff0099
@@ -22,3 +24,5 @@ $html-colors: #ff9500
 
 // Variables page
 $layout-smartphone-break: 960px
+$smart-smartphone-break: 390px
+$ultra-smart-smartphone-break: 350px
