--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -23,6 +23,10 @@ $html-colors: #ff9500
 
 
 // Variables page
+$beyond-fourk-screen-break: 8000px
+$fourk-screen-break: 2220px
+$fullhd-screen-break: 1480px
+$laptop-screen-break: 1128px
 $layout-smartphone-break: 960px
 $smart-smartphone-break: 390px
 $ultra-smart-smartphone-break: 350px
