Add three.js library and vanta.js dependency some cool effects

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -7,10 +7,13 @@
     font-family: variables.$font-stack
     box-sizing: border-box
 
-body
-    background-image: variables.$bg-background-color
+// body
+    // background-image: variables.$bg-background-color
 
-
+.bg
+    background-attachment: fixed
+    // width: 100vw
+    // height: 100vh
 
 a, svg 
     transition: .8s
