--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -3,7 +3,7 @@ $text-color: #fff
 $text-color-secondary: #a6a6a6
 
 $body-bg-color: #271b31
-$bg-color:#111
+$bg-color:#111111fa
 $bg-color-secondary: #1d1d1d
 
 $container-border-radius: 10px
