Update h1 styling in app.sass

--- a/src/styles/components/app.sass
+++ b/src/styles/components/app.sass
@@ -11,12 +11,14 @@
     
     
     h1
-        width: 100%
+        // width: 100%
+        padding: 0.5rem
         font-size: 5rem
         margin-bottom: 2rem
         background: variables.$gradient
         -webkit-background-clip: text
         -webkit-text-fill-color: transparent
+        backdrop-filter: blur(10px)
         
 
 // celular/tablet
