--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -10,7 +10,7 @@ $container-border-radius: 10px
 $card-border-radius: 5px
 $gradient: linear-gradient(90deg, rgba(250,82,82,1) 0%, rgba(221,36,118,1) 100%)
 
-$bg-background-color: linear-gradient(270deg, #8e0087 0%, rgba(47,0,132,1) 60%, rgba(65,0,142,1) 100%)
+$bg-background-color: linear-gradient(270deg, #8e0087 0%, rgba(47,0,132,1) 60%, rgb(65, 0, 142) 100%)
 $bg-background-color-smartphone: linear-gradient(0deg, #8e0087 0%, rgba(47,0,132,1) 60%, rgba(65,0,142,1) 100%)
 
 
