--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -6,6 +6,7 @@
     margin: 0
     font-family: variables.$font-stack
     box-sizing: border-box
+    // background-color: #150622
 
 // body
     // background-image: variables.$bg-background-color
