--- a/src/styles/components/app.sass
+++ b/src/styles/components/app.sass
@@ -3,27 +3,40 @@
 
 // PC
 
+h1
+    // width: 100%
+    display: inline-flex
+    padding: 3rem
+    font-size: 5rem
+    margin: auto
+    margin-left: 2rem
+    background: variables.$gradient
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+    backdrop-filter: blur(10px)
+
 #portfolio
     display: flex
     flex-wrap: wrap
     padding: 3rem
     gap: 3rem
-    
+
+// celular/tablet
+@media (max-width: variables.$layout-smartphone-break)
     
     h1
-        // width: 100%
-        padding: 0.5rem
-        font-size: 5rem
-        margin-bottom: 2rem
+        display: inline-flex
+        padding: 2rem
+        font-size: 3rem
+        margin: 2rem
+        margin-bottom: 4rem
         background: variables.$gradient
         -webkit-background-clip: text
         -webkit-text-fill-color: transparent
         backdrop-filter: blur(10px)
-        
 
-// celular/tablet
-@media (max-width: variables.$layout-smartphone-break)
-    #portfolio
+
+    #portfolio  
         display: flex
         flex-direction: column
         flex-wrap: nowrap
@@ -43,11 +56,9 @@
         @media (max-width: variables.$smart-smartphone-break)
             h1
                 width: 100%
-                font-size: 3.5rem
+                font-size: 1rem
                 margin-bottom: 2rem
-                background: variables.$gradient
-                -webkit-background-clip: text
-                -webkit-text-fill-color: transparent
+  
         
         @media (max-width: variables.$ultra-smart-smartphone-break)
             h1
@@ -57,3 +68,20 @@
                 background: variables.$gradient
                 -webkit-background-clip: text
                 -webkit-text-fill-color: transparent
+
+
+
+// ultra small celular/tablet
+@media (max-width: variables.$ultra-smart-smartphone-break)
+    
+    h1
+        display: inline-flex
+        padding: 2rem
+        font-size: 2.5rem
+        margin: 2rem
+        margin-bottom: 4rem
+        background: variables.$gradient
+        -webkit-background-clip: text
+        -webkit-text-fill-color: transparent
+        backdrop-filter: blur(10px)
+        
