Update technology icons and colors

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -18,8 +18,19 @@ $bg-background-tech-page: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #29e63
 
 $color-border: #ff0099
 
+// Page Colors
 $python-colors: #00618A
 $html-colors: #ff9500
+$css-colors: #264de4
+$javascript-colors: #f7df1e
+$react-colors: #61dafb
+$golang-colors: #00add8
+$postgres-colors: #336791
+$cplusplus-colors: #00599c
+$espressif-colors: #f02222
+$aws-colors: #ff9900
+$flutter-colors: #02569b
+$visualcomputing-colors: #d3d3d3
 
 
 // Variables page
