--- a/src/styles/components/pages.sass
+++ b/src/styles/components/pages.sass
@@ -130,3 +130,53 @@
         filter: drop-shadow(0 0 1em variables.$html-colors)
         svg
             color: variables.$html-colors
+
+    #css:hover
+        filter: drop-shadow(0 0 1em variables.$css-colors)
+        svg
+            color: variables.$css-colors
+
+    #js:hover
+        filter: drop-shadow(0 0 1em variables.$javascript-colors)
+        svg
+            color: variables.$javascript-colors
+    
+    #react:hover
+        filter: drop-shadow(0 0 1em variables.$react-colors)
+        svg
+            color: variables.$react-colors
+    
+    #golang:hover
+        filter: drop-shadow(0 0 1em variables.$golang-colors)
+        svg
+            color: variables.$golang-colors
+
+    #postgres:hover
+        filter: drop-shadow(0 0 1em variables.$postgres-colors)
+        svg
+            color: variables.$postgres-colors
+    
+    #cplusplus:hover
+        filter: drop-shadow(0 0 1em variables.$cplusplus-colors)
+        svg
+            color: variables.$cplusplus-colors
+    
+    #aws:hover
+        filter: drop-shadow(0 0 1em variables.$aws-colors)
+        svg
+            color: variables.$aws-colors
+
+    #espressif:hover
+        filter: drop-shadow(0 0 1em variables.$espressif-colors)
+        svg
+            color: variables.$espressif-colors
+    
+    #flutter:hover
+        filter: drop-shadow(0 0 1em variables.$flutter-colors)
+        svg
+            color: variables.$flutter-colors
+    
+    #visualcomputing:hover
+        filter: drop-shadow(0 0 1em variables.$visualcomputing-colors)
+        svg
+            color: variables.$visualcomputing-colors
